REGRESSION (r181660): Safari navigates to link after a starting and canceling a force preview https://bugs.webkit.org/show_bug.cgi?id=143057 -and corresponding- rdar://problem/20251436

Reviewed by Tim Horton.

Source/WebCore:

This patch adds a value for ActionUpdated to the ImmediateActionStage enum. Now if
m_immediateActionStage indicates that an immediate action has either begun or
completed then we can have the same behavior.
* page/EventHandler.cpp:
(WebCore::EventHandler::handleMouseReleaseEvent):
* page/EventHandler.h:

Source/WebKit2:

Always call _page->immediateActionDidUpdate() so that the EventHandler’s
ImmediateActionStage is appropriately updated.
* UIProcess/mac/WKImmediateActionController.mm:
(-[WKImmediateActionController immediateActionRecognizerDidUpdateAnimation:]):

Update the EventHandler’s ImmediateActionStage.
* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::immediateActionDidUpdate):



Canonical link: https://commits.webkit.org/161080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181971 268f45cc-cd09-0410-ab3c-d52691b4dbfc